src/Cosette/tests/symbolic/passing/symbolic-trivial-2.js
var n = symb_number (n);
Assume(n >= 0);
var y = 3 + 7 + n;
var z = y + 7;
Assert(z >= 0);