src/Cosette/tests/symbolic/failing/numericBounds.js
var i = symb_number (i); 
var output = 0; 

Assume (i < 3); 

while (i > 0) { 
	output += i; 
 	i--; 
}


Assert (output > 20);

